--- a/styles/style.css
+++ b/styles/style.css
@@ -78,3 +78,38 @@ body {
     grid-column: 11 / span 2; }
   .responsive-grid-1 .footer {
     grid-column: 1 / span 12; } }
+
+.responsive-grid-2 {
+  display: grid;
+  grid-template-areas: 'header' 'navigation' 'main' 'sidebar' 'ads' 'footer';
+  grid-template-rows: auto auto 1fr auto auto auto;
+  height: 100vh;
+  gap: 24px; }
+
+.responsive-grid-2 .header {
+  grid-area: header; }
+
+.responsive-grid-2 .navigation {
+  grid-area: navigation; }
+
+.responsive-grid-2 .ads {
+  grid-area: ads; }
+
+.responsive-grid-2 .sidebar {
+  grid-area: sidebar; }
+
+.responsive-grid-2 .main {
+  grid-area: main; }
+
+.responsive-grid-2 .footer {
+  grid-area: footer; }
+
+@media (min-width: 720px) {
+  .responsive-grid-2 {
+    grid-template-areas: 'header header header' 'navigation navigation navigation' 'sidebar main main' 'ads footer footer';
+    grid-template-rows: auto auto 1fr auto; } }
+
+@media (min-width: 1020px) {
+  .responsive-grid-2 {
+    grid-template-areas: 'header header header header' 'sidebar navigation navigation ads' 'sidebar main main ads' 'footer footer footer footer';
+    grid-template-rows: auto auto 1fr auto; } }
