Add Diagonal grid

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,3 +34,5 @@ body {
 @import './grid-columns';
 @import './responsive-grid-1';
 @import './responsive-grid-2';
+@import './responsive-without-media-query';
+@import './diagonal-grid';
