--- a/styles/style.css
+++ b/styles/style.css
@@ -113,3 +113,33 @@ body {
   .responsive-grid-2 {
     grid-template-areas: 'header header header header' 'sidebar navigation navigation ads' 'sidebar main main ads' 'footer footer footer footer';
     grid-template-rows: auto auto 1fr auto; } }
+
+.responsive-without-media-query {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
+
+.responsive-without-media-query .item-5 {
+  grid-column-end: span 2; }
+
+.diagonal-grid {
+  display: grid;
+  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  height: 100vh; }
+
+.diagonal-grid .item-1 {
+  grid-row: 1 / span 3;
+  grid-column: 1 / span 3; }
+
+.diagonal-grid .item-2 {
+  grid-row: 4 / span 3;
+  grid-column: 4 / span 3; }
+
+.diagonal-grid .item-3 {
+  grid-row: 7 / span 3;
+  grid-column: 7 / span 3; }
+
+.diagonal-grid .item-4 {
+  grid-row: 10 / span 3;
+  grid-column: 10 / span 3; }
